--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -7,7 +7,7 @@
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
         <a href="../../index3.html" class="brand-link">
-          <img src="assets/logotitleside.png" class="logoshop">
+          <img src="assets/logoonly.png" class="logoshop">
         </a>
     
         <!-- Sidebar -->
@@ -19,7 +19,7 @@
               
             </div>
             <div class="info">
-              <a href="#" class="d-block">Alexander Pierce</a>
+              <a href="#" class="d-block">Administrator</a>
             </div>
           </div>
     
