--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -9,7 +9,7 @@
         <div class="card-body">
           <p class="login-box-msg">Sign in to access your account</p>
     
-          <form (ngSubmit)="userLogin()" method="post">
+          <form (ngSubmit)="getAccessToken()" method="post">
             <div class="input-group mb-3">
               <input type="email"  [(ngModel)]="user.email"  class="form-control" id="email" name="email" placeholder="Email">
               <div class="input-group-append">
